// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Array Generic Template Should able to inspect array generic on getter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "MyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": Array [
            "T",
          ],
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": get prop,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": Array [
        String,
      ],
      "typeClassification": "Array",
    },
  ],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Array Generic Template Should able to inspect array generic on method parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": SuperClass,
              "type": Array [
                "T",
              ],
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "par",
          "index": 0,
          "kind": "Parameter",
          "name": "par",
          "type": Array [
            String,
          ],
          "typeClassification": "Array",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Array Generic Template Should able to inspect array generic on property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "MyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": Array [
            "T",
          ],
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": Array [
        String,
      ],
      "typeClassification": "Array",
    },
  ],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Array Generic Template Should able to inspect array generic type on method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": Array [
            "T",
          ],
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": Array [
        String,
      ],
      "typeClassification": "Array",
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Array Type Should able to inspect array generic on getter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        Array [
          String,
        ],
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "MyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": get prop,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": Array [
        String,
      ],
      "typeClassification": "Array",
    },
  ],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Array Type Should able to inspect array generic on method parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        Array [
          String,
        ],
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": SuperClass,
              "type": "T",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "par",
          "index": 0,
          "kind": "Parameter",
          "name": "par",
          "type": Array [
            String,
          ],
          "typeClassification": "Array",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Array Type Should able to inspect array generic on property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        Array [
          String,
        ],
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "MyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": Array [
        String,
      ],
      "typeClassification": "Array",
    },
  ],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Array Type Should able to inspect array generic type on method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        Array [
          String,
        ],
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": Array [
        String,
      ],
      "typeClassification": "Array",
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Create Generic Should add reflection properly 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        Number,
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": SuperClass,
              "type": "U",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "par",
          "index": 0,
          "kind": "Parameter",
          "name": "par",
          "type": String,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Number,
      "typeClassification": "Primitive",
    },
  ],
  "name": "DynamicType",
  "properties": Array [],
  "super": SuperClass,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Error Handling Should not show error in deep inheritance when generic parameter stop 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "B",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "super",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": SuperClass,
              "type": "A",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "par",
          "index": 0,
          "kind": "Parameter",
          "name": "par",
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Date,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": GrandSuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "grandSuper",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": GrandSuperClass,
              "type": "U",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "par",
          "index": 0,
          "kind": "Parameter",
          "name": "par",
          "type": Date,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Number,
      "typeClassification": "Primitive",
    },
  ],
  "name": "MyRealClass",
  "properties": Array [],
  "super": MyClass,
  "type": MyRealClass,
  "typeClassification": "Class",
}
`;

exports[`Error Handling Should not show error when generic parameter stop 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "MyRealClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": GrandSuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "grandSuper",
      "set": undefined,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
  "super": MyClass,
  "type": MyRealClass,
  "typeClassification": "Class",
}
`;

exports[`Error Handling Should show proper error when number of types provided mismatch 1`] = `"Number of parameters @generic.parameter() and @generic.argument() mismatch between SuperClass and MyClass"`;

exports[`Error Handling Should show proper error when specify template on type but doesn't specify @generic.template() 1`] = `"SuperClass doesn't have @generic.parameter() decorator required by generic parameter B"`;

exports[`Generic Should able to inspect generic on getter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "MyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": get prop,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to inspect generic on method parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": SuperClass,
              "type": "T",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "par",
          "index": 0,
          "kind": "Parameter",
          "name": "par",
          "type": String,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": undefined,
      "typeClassification": undefined,
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to inspect generic on parameter properties 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
    Object {
      "type": "ParameterProperties",
      Symbol(tinspector:decoratorId): Symbol(paramProp),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": true,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "MyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "index": 0,
      "isParameter": true,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to inspect generic on property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "MyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to inspect generic type on inheritance when generic type parameter stop 1`] = `
Array [
  Object {
    "name": "str",
    "pars": Array [
      Object {
        "name": "bool",
        "type": Date,
      },
    ],
    "type": Number,
  },
]
`;

exports[`Generic Should able to inspect generic type on inheritance when generic type parameter stop, with generic data type 1`] = `
Array [
  Object {
    "name": "str",
    "pars": Array [
      Object {
        "name": "bool",
        "type": Date,
      },
    ],
    "type": DynamicType,
  },
]
`;

exports[`Generic Should able to inspect generic type on inheritance when generic type parameter stop, with generic data type 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        Number,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DynamicType",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": Data,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "data",
      "set": undefined,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
  "super": Data,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to inspect generic type on method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": String,
      "typeClassification": "Primitive",
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to inspect inherited generic type 1`] = `
Array [
  Object {
    "name": "num",
    "pars": Array [
      Object {
        "name": "date",
        "type": Date,
      },
    ],
    "type": Number,
  },
  Object {
    "name": "str",
    "pars": Array [
      Object {
        "name": "bool",
        "type": Boolean,
      },
    ],
    "type": String,
  },
]
`;

exports[`Generic Should able to inspect inherited generic type 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        Number,
        Date,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "num",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": SuperClass,
              "type": "U",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "date",
          "index": 0,
          "kind": "Parameter",
          "name": "date",
          "type": Date,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Number,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": GrandSuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "str",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": GrandSuperClass,
              "type": "U",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "bool",
          "index": 0,
          "kind": "Parameter",
          "name": "bool",
          "type": Boolean,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": String,
      "typeClassification": "Primitive",
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to inspect nested generic class with multiple template 1`] = `
Array [
  Object {
    "name": "super",
    "pars": Array [
      Object {
        "name": "par",
        "type": Number,
      },
    ],
    "type": Date,
  },
  Object {
    "name": "grandSuper",
    "pars": Array [
      Object {
        "name": "par",
        "type": Date,
      },
    ],
    "type": Number,
  },
]
`;

exports[`Generic Should able to inspect nested generic class with multiple template 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        Number,
        Date,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": SuperClass,
          "type": "B",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "super",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": SuperClass,
              "type": "A",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "par",
          "index": 0,
          "kind": "Parameter",
          "name": "par",
          "type": Number,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Date,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": GrandSuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "grandSuper",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": GrandSuperClass,
              "type": "U",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "par",
          "index": 0,
          "kind": "Parameter",
          "name": "par",
          "type": Date,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Number,
      "typeClassification": "Primitive",
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to inspect properties on deep inheritance 1`] = `
Array [
  Object {
    "name": "super",
    "type": String,
  },
  Object {
    "name": "grand",
    "type": Number,
  },
]
`;

exports[`Generic Should able to inspect properties on deep inheritance 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "MyClass",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": Super,
          "type": "B",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "super",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": Grand,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "grand",
      "set": undefined,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
  "super": Super,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should able to omit generic parameter and argument on derived class, when uses the order is the same 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": GrandSuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "method",
      "parameters": Array [],
      "returnType": String,
      "typeClassification": "Primitive",
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should inherit generic data type when overridden 1`] = `
Array [
  Object {
    "name": "grandSuper",
    "pars": Array [
      Object {
        "name": "pur",
        "type": Date,
      },
    ],
    "type": Number,
  },
]
`;

exports[`Generic Should inherit generic data type when overridden 2`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": MyClass,
      "types": Array [
        Number,
        Date,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": GrandSuperClass,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "kind": "Method",
      "name": "grandSuper",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "genericArguments": Array [],
              "kind": "Override",
              "target": GrandSuperClass,
              "type": "U",
              Symbol(tinspector:decoratorId): Symbol(override),
              Symbol(tinspector:decoratorOption): Object {
                "allowMultiple": false,
                "applyTo": Array [],
                "inherit": true,
                "removeApplied": true,
              },
            },
          ],
          "fields": "pur",
          "index": 0,
          "kind": "Parameter",
          "name": "pur",
          "type": Date,
          "typeClassification": "Primitive",
        },
      ],
      "returnType": Number,
      "typeClassification": "Primitive",
    },
  ],
  "name": "MyClass",
  "properties": Array [],
  "super": SuperClass,
  "type": MyClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Should not error inspect the generic class 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "genericArguments": Array [],
            "kind": "Override",
            "target": SuperClass,
            "type": "T",
            Symbol(tinspector:decoratorId): Symbol(override),
            Symbol(tinspector:decoratorOption): Object {
              "allowMultiple": false,
              "applyTo": Array [],
              "inherit": true,
              "removeApplied": true,
            },
          },
        ],
        "fields": "par",
        "index": 0,
        "kind": "Parameter",
        "name": "par",
        "type": undefined,
        "typeClassification": undefined,
      },
    ],
  },
  "decorators": Array [
    Object {
      "kind": "GenericTemplate",
      "target": SuperClass,
      "templates": Array [
        "T",
      ],
      Symbol(tinspector:decoratorId): Symbol(genericTemplate),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "SuperClass",
  "properties": Array [],
  "super": Object,
  "type": SuperClass,
  "typeClassification": "Class",
}
`;

exports[`Generic Type In Member Type Should able to define generic type directly using @type() 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        Number,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DynamicType",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": CustomGeneric,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": Number,
      "typeClassification": "Primitive",
    },
  ],
  "super": CustomGeneric,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Generic Type In Member Type Should able to define generic type directly using @type() with type of array 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        Array [
          Number,
        ],
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DynamicType",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": CustomGeneric,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": Array [
        Number,
      ],
      "typeClassification": "Array",
    },
  ],
  "super": CustomGeneric,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Generic Type In Member Type Should able to inspect array of generic type on method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DynamicType",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": CustomGeneric,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": CustomGeneric,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Generic Type In Member Type Should able to inspect generic on getter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DynamicType",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": CustomGeneric,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": CustomGeneric,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Generic Type In Member Type Should able to inspect generic on method parameter 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DynamicType",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": CustomGeneric,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": CustomGeneric,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Generic Type In Member Type Should able to inspect generic on property 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DynamicType",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": CustomGeneric,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": CustomGeneric,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Generic Type In Member Type Should able to inspect generic type on method 1`] = `
Object {
  "ctor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [
    Object {
      "kind": "GenericType",
      "target": DynamicType,
      "types": Array [
        String,
      ],
      Symbol(tinspector:decoratorId): Symbol(genericType),
      Symbol(tinspector:decoratorOption): Object {
        "allowMultiple": false,
        "applyTo": Array [],
        "inherit": false,
        "removeApplied": true,
      },
    },
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DynamicType",
  "properties": Array [
    Object {
      "decorators": Array [
        Object {
          "genericArguments": Array [],
          "kind": "Override",
          "target": CustomGeneric,
          "type": "T",
          Symbol(tinspector:decoratorId): Symbol(override),
          Symbol(tinspector:decoratorOption): Object {
            "allowMultiple": false,
            "applyTo": Array [],
            "inherit": true,
            "removeApplied": true,
          },
        },
      ],
      "get": undefined,
      "kind": "Property",
      "name": "prop",
      "set": undefined,
      "type": String,
      "typeClassification": "Primitive",
    },
  ],
  "super": CustomGeneric,
  "type": DynamicType,
  "typeClassification": "Class",
}
`;

exports[`Get Generic Type Should throw error template target doesn't specify @generic.template() 1`] = `"SuperClass doesn't have @generic.parameter() decorator required by generic parameter A"`;

exports[`Get Generic Type Should throw error when provided non string type 1`] = `"Provided decorator is not a generic type"`;

exports[`Get Generic Type Should throw error when the target is not in inheritance 1`] = `"Unable to get type information because MyOtherClass is not inherited from SuperClass"`;
